Issue resolved App.js updated

--- a/package.json
+++ b/package.json
@@ -42,5 +42,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "jest": "^27.5.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tejumv/lost-found-system.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/tejumv/lost-found-system/issues"
+  },
+  "homepage": "https://github.com/tejumv/lost-found-system#readme"
 }
